--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,7 @@ textarea {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   margin: 0;
+  padding: 0;
 }
 
 ol,
@@ -63,11 +64,15 @@ textarea {
 }
 
 .container {
-
+  display: block;
+  max-width: 480px;
+  margin: 0 auto;
+  padding: 1rem;
 }
 
 .main {
-
+  background-color: #fff;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
 }
 
 .title {
