--- a/src/index.css
+++ b/src/index.css
@@ -65,9 +65,8 @@ textarea {
 
 .container {
   display: block;
-  max-width: 480px;
+  max-width: 85%;
   margin: 0 auto;
-  padding: 1rem;
 }
 
 .main {
