--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import './assets/background.css';
+
 :root {
   --bg-orange:       #F46A05;
   --bg-orange-hover: #D85F08;
@@ -7,4 +9,16 @@
   --bg-white:        #FFFFFF;
   --bg-yellow:       #fcb705;
   --bg-roxo:         #E9008C;
+}
+
+.bg-orange {
+  background-color: var(--bg-orange);
+}
+
+html, body {
+  font-size: 16px;
+  font-family: 'Ruda', sans-serif;
+  font-weight: 400;
+  width: 100%;
+  height: 100%;
 }
