--- a/src/assets/background.css
+++ b/src/assets/background.css
@@ -2,8 +2,5 @@
   width: 100%;
   height: 100%;
   min-height: 600px;
-  background-image: url('../img/stock.jpeg');
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
+  background-color: #F0F2F5;
 }
