--- a/src/components/DashBody/style.css
+++ b/src/components/DashBody/style.css
@@ -5,7 +5,7 @@
 }
 
 .container-fluid {
-  background-color: gainsboro;
+  background-color: #F0F2F5;
 }
 
 a {
@@ -18,6 +18,25 @@ a {
   font-weight: bold;
 }
 
+.card-values {
+  font-weight: bold;
+}
+
+.top-card {
+  border-width: 3px;
+  border-color: rgb(1, 173, 1);
+}
+
 ol.breadcrumb {
   margin-bottom: 0.25rem;
+}
+
+.table {
+  min-width: 1000px;
+  min-height: min-content;
+  max-height: max-content;
+}
+
+input[type=button] {
+  background-color: white;
 }
