--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ html {
 *,
 *:before,
 *:after {
-  box-sizing: inherit;
+  box-sizing: border-box;
 }
 
 body {
@@ -61,12 +61,6 @@ textarea {
 
 ::placeholder {
   color: rgba(0, 0, 0, 0.2);
-}
-
-.container {
-  display: block;
-  max-width: 85%;
-  margin: 0 auto;
 }
 
 .main {
