Modificacoes para tentativa de uso dos filtros atraves de modal

--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@ html {
 }
 
 body {
-  background-color: #ffeaa7;
+  background-color: #F0F2F5;
   user-select: none;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
