--- a/src/components/DashBody/style.css
+++ b/src/components/DashBody/style.css
@@ -23,8 +23,8 @@ a {
 }
 
 .top-card {
-  border-width: 3px;
-  border-color: rgb(1, 173, 1);
+  border-width: 2px;
+  border-color: rgba(0, 0, 0, 0.3);
 }
 
 ol.breadcrumb {
@@ -38,5 +38,5 @@ ol.breadcrumb {
 }
 
 input[type=button] {
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0);
 }
