--- a/src/components/Filters/styles.css
+++ b/src/components/Filters/styles.css
@@ -1,14 +1,12 @@
-li.list-group-item {
-  text-align: center;
-  vertical-align: middle;
-}
-
-li.list-group-item p{
-  margin: 0;
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-}
-
 .filters-logo {
   min-height: 8rem;
+}
+
+.text-gray {
+  color: gray;
+}
+
+.button-reset {
+  margin-left: -40px;
+  z-index: 100;
 }
